[package]
name = "twig"
version = "0.0.6"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
jemallocator = "0.5.4"
jwalk = "0.8.1"
libc = "0.2.183"
lscolors = "0.21.0"
nu-ansi-term = "0.50.3"
users = "0.11.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
